# beachist

./: .gitignore  CNAME  README.md  docker-compose.yml  index.md  package-lock.json  package.json  setup.md
.circleci/: config.yml  setup_keystore.sh
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: admin_test.yml  android.yml  android_deploy.yml  android_deploy_caller.yml  android_test.yml  backend_test.yml  extract_secrets.yml  lambda_deploy.yml  lambda_test.yml  main.yml  npm_check_update.yml  web.yml  web_deploy.yml
_includes/: head_custom.html
admin/: .eslintignore  .eslintrc  .prettierrc  package-lock.json  package.json  tsconfig.json
admin/public/: index.html
admin/src/: App.test.js  App.tsx  AuthenticatedApp.tsx  Navigation.tsx  UnauthenticatedApp.tsx  index.tsx  serviceWorker.js
android/: .gitignore  build.gradle  gradle.properties  library.gradle  settings.gradle
android/app/: build.gradle  google-services.json  proguard-rules.pro
android/auth/: build.gradle
backend/: .env  .env.test  composer.json
lambdas/: .eslintcache  .eslintrc  .gitignore  cdk.json  package-lock.json  package.json  tsconfig.cdk.json  tsconfig.json
new-backend/: manage.py  pyproject.toml
new-backend/beachist/: apps.py  asgi.py  event_handlers.py  mixins.py  models.py  mqtt.py  serializers.py  settings.py  token.py  urls.py  views.py  wsgi.py
new-backend/beachist/ca/: certificates.py
new-backend/beachist/jobs/: __init__.py  jobs.py  scheduler.py
new-backend/beachist/migrations/: 0001_initial.py  0002_user_last_login.py  0003_mqttmessage.py
(+543 files in other folders)
