[project]
name = "new-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Tjark Saul",email = "mail@appfel.dev"}
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.1"
django_rest_framework = "^0.1.0"
mysqlclient = "^2.2.7"
pyopenssl = "^25.0.0"
djangorestframework-simplejwt = "^5.5.0"
argon2-cffi = "^23.1.0"
py-bcrypt = "^0.4"
paho-mqtt = "^2.1.0"
requests = "^2.32.3"
apscheduler = "^3.11.0"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
